--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,87 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+header{
+  padding: 48px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 32px;
+  background-color: #393E41;
+  color: white;
+  box-shadow: 0px 8px 8px #393E41;
+}
+
+header h1 {
+  margin-bottom: 32px;
+}
+
+header p {
+  padding-left: 35px;
+  padding-right: 35px;
+  text-align: center;
+}
+
+div {
+  margin: 2px solid green;
+}
+
 body {
-  background-color: #E1F0C4;
   font-size: 20px;
   font-family: 'Ubuntu', sans-serif;
   line-height: 32px;
 }
 
+#nome-foto {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 32px 0px;
+  border-bottom: 1px solid #ABA9BF;
+}
+
+#profilePicture {
+  height: 250px;
+  border-radius: 25px;
+  align-items: center;
+}
+
+.descricao {
+  margin-top: 40px;
+  height: 240px;
+  border-bottom: 1px solid #ABA9BF;
+}
+
+#descricaoescrita {
+  position: absolute;
+  text-align: center;
+  left: 10%;
+  right: 10%;
+}
+
+.logos {
+  height: 50px;
+  position: absolute
+}
+
+#logo-github {
+  left:  40%;
+}
+#logo-linkedin {
+  right: 40%;
+}
+
+.socials {
+  position: relative;
+}
+
+footer {
+  border-top: 20px solid #ABA9BF;
+  height: 90px;
+  background-color:  #ABA9BF;
+}
